--- a/k2/progress_tracker/templates/progress_tracker/logout.html
+++ b/k2/progress_tracker/templates/progress_tracker/logout.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h2>Logout</h2>
-    <p>You have been logged out. <a href="{% url 'progress_tracker:login' %}">Login again</a>.</p>
+    <p>You have been logged out. <a href="{% url 'progress_tracker:login/' %}">Login again</a>.</p>
 </body>
 </html>
