--- a/k2/progress_tracker/templates/progress_tracker/progress_graph.html
+++ b/k2/progress_tracker/templates/progress_tracker/progress_graph.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
       .green-box {
         width: 25px;
@@ -42,6 +42,12 @@
     </style>
   </head>
   <body>
+
+
+    
+   {% extends "progress_tracker/base.html" %}
+
+   {% block content %}
     <div class="container mt-4">
       <h1>Attendance Sheet</h1>
       <table class="table table-bordered">
@@ -76,12 +82,11 @@
         </tbody>
       </table>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    
     <div class="d-flex" style="justify-content: center;">
       <a class="back-button" href="/students/">Back</a>
     </div>
+
+    {% endblock %}
   </body>
 </html>
