--- a/k2/progress_tracker/templates/progress_tracker/student_list.html
+++ b/k2/progress_tracker/templates/progress_tracker/student_list.html
@@ -42,36 +42,9 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <a class="navbar-brand" href="">K2</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                <a class="nav-link border border-dark" href="/progress_graph/" style="color: white;">Attendance Report <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item ml-2 active">
-                    <a class="nav-link border border-dark" href="/assignmnet_report/" style="color: white;">assigment_report <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item ml-2 active">
-                    <a class="nav-link border border-dark" href="/marksheet/" style="color: white;">marksheet <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item ml-2 active">
-                    <a class="nav-link border border-dark" href="/overall_progress/" style="color: white;">overall_progress <span class="sr-only"></span></a>
-                </li>
+   {% extends "progress_tracker/base.html" %}
 
-            </ul>
-
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                <a class="nav-link border border-dark" href="logout" style="position: right; color:white; background: red;">Logout <span class="sr-only"></span></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+   {% block content %}
 </br>
 <div p-3>
     <h2>Progress Report Detail</h2>
@@ -104,26 +77,27 @@
             </tr>
         {% endfor %}
     </table>
-
-    <div class="pagination">
-        <span class="step-links">
-            {% if progress_reports.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ progress_reports.previous_page_number }}">previous</a>
-            {% endif %}
-
-            <span class="current">
-                Page {{ progress_reports.number }} of {{ progress_reports.paginator.num_pages }}.
+</br>
+    <div class="d-flex justify-content-center">
+        <div class="pagination">
+            <span class="step-links">
+                {% if progress_reports.has_previous %}
+                    <a href="?page=1" class="btn btn-outline-primary">&laquo; first</a>
+                    <a href="?page={{ progress_reports.previous_page_number }}" class="btn btn-outline-primary">previous</a>
+                {% endif %}
+    
+                <span class="current">
+                    Page {{ progress_reports.number }} of {{ progress_reports.paginator.num_pages }}.
+                </span>
+    
+                {% if progress_reports.has_next %}
+                    <a href="?page={{ progress_reports.next_page_number }}" class="btn btn-outline-primary">next</a>
+                    <a href="?page={{ progress_reports.paginator.num_pages }}" class="btn btn-outline-primary">last &raquo;</a>
+                {% endif %}
             </span>
-
-            {% if progress_reports.has_next %}
-                <a href="?page={{ progress_reports.next_page_number }}">next</a>
-                <a href="?page={{ progress_reports.paginator.num_pages }}">last &raquo;</a>
-            {% endif %}
-        </span>
+        </div>
     </div>
-</div>
+{% endblock %}
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
