--- a/k2/progress_tracker/templates/progress_tracker/student_list.html
+++ b/k2/progress_tracker/templates/progress_tracker/student_list.html
@@ -78,8 +78,8 @@
         {% endfor %}
     </table>
 </br>
-    <div class="d-flex justify-content-center">
-        <div class="pagination">
+     <div class="d-flex justify-content-center">
+     {% comment %}   <div class="pagination">
             <span class="step-links">
                 {% if progress_reports.has_previous %}
                     <a href="?page=1" class="btn btn-outline-primary">&laquo; first</a>
@@ -96,8 +96,29 @@
                 {% endif %}
             </span>
         </div>
+    </div> {% endcomment %}
+
+
+    <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+    
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+    
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}"     class="btn-outline-primary">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}"  class="btn-outline-primary">last &raquo;</a>
+            {% endif %}
+        </span>
     </div>
-{% endblock %}
+
+</div>
+    {% endblock %}
 
 </body>
 </html>
