--- a/k2/progress_tracker/templates/progress_tracker/progress_graph.html
+++ b/k2/progress_tracker/templates/progress_tracker/progress_graph.html
@@ -66,7 +66,7 @@
             <th scope="col">W10</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="border border-collapse">
           {% for username, percentages in attendance_data.items %}
             <tr>
               <td>{{ username }}</td>
