--- a/k2/progress_tracker/templates/progress_tracker/base.html
+++ b/k2/progress_tracker/templates/progress_tracker/base.html
@@ -19,20 +19,23 @@
                 <a class="nav-link" href="/progress_graph/" style="color: white;">Attendance Report <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item ml-2 ml-2 active">
-                    <a class="nav-link" href="/assignmnet_report/" style="color: white;">assigment_report <span class="sr-only"></span></a>
+                    <a class="nav-link" href="/assignmnet_report/" style="color: white;">Assigment_Submission % <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item ml-2 active">
-                    <a class="nav-link" href="/marksheet/" style="color: white;">marksheet <span class="sr-only"></span></a>
+                    <a class="nav-link" href="/marksheet/" style="color: white;">Marks_By_Mentor <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item ml-2 active">
-                    <a class="nav-link" href="/overall_progress/" style="color: white;">overall_progress <span class="sr-only"></span></a>
+                    <a class="nav-link" href="/overall_progress/" style="color: white;">Overall_Progress <span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item ml-2 active">
+                    <a class="nav-link" href="/students/" style="color: white;">Progress_Report_Detail <span class="sr-only"></span></a>
                 </li>
 
             </ul>
 
             <ul class="navbar-nav">
                 <li class="nav-item active ml-auto">
-                <a class="btn btn-outline-danger" href="/logout/">Logout <span class="sr-only"></span></a>
+                <a class="btn btn-outline-dark" href="/logout/">Logout <span class="sr-only"></span></a>
                 </li>
             </ul>
         </div>
