--- a/k2/progress_tracker/templates/progress_tracker/marksheet.html
+++ b/k2/progress_tracker/templates/progress_tracker/marksheet.html
@@ -50,7 +50,7 @@
 
     {% block content %}
     <div class="container mt-4">
-        <h1>Marksheet</h1>
+        <h1>Mentor Marks</h1>
         <table class="table table-bordered">
             <thead class="thead-dark">
                 <tr>
@@ -67,7 +67,7 @@
                     <th scope="col">W10</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class=' border border-collapse'>
                 {% for username, marks in mark_data.items %}
                     <tr>
                         <td>{{ username }}</td>
